<resources>
    <string name="app_name">Nibble</string>
    <string name="home_section">Home</string>
    <string name="crowd_section">Crowd</string>
    <string name="roundup_accts_section">Roundup Accounts</string>
    <string name="loan_accts_section">Loan Accounts</string>
    <string name="help_section">Help</string>

    <string name="action_settings">Log Off</string>
    <string name="invalid_password">Password is invalid</string>
    <string name="acode_required">Activation code is required</string>
    <string name="acode_incorrect">Activation code is invalid</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Login</string>
    <string name="field_required">This field is required</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">SignupActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>

    <string name="prompt_invitation_code">Invitation Code</string>
    <string name="prompt_address1">Address Line 1</string>
    <string name="prompt_address2">Address Line 2</string>
    <string name="prompt_city">City</string>
    <string name="prompt_state">Pick a State</string>
    <string name="prompt_zip">Zip Code</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_email">    Email</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="logout_section">Logout</string>
    <string name="action_more_trx">VIEW ALL TRANSACTIONS</string>
    <string name="username_taken">Username already in use</string>
    <string name="action_add_money">Add Money</string>
    <string name="action_add_acct">Add Account</string>

    <string name="action_invite">Invite</string>
    <string name="na_dialog_header">Add an Account</string>
    <string name="prompt_acct_name">Account Name</string>
    <string name="na_acct_name">Account Name</string>
    <string name="prompt_acct_number">Account Number</string>
    <string name="prompt_exp_month">Month</string>
    <string name="prompt_exp_year">Year</string>
    <string name="prompt_acct_cvv">CVV</string>
    <string name="action_add_card">Add</string>
    <string name="cancel">Cancel</string>
    <string name="load_dialog_header">Add Money</string>
    <string name="prompt_acct">Pick an account</string>
    <string name="spinner_no_account">No Accounts Found</string>
    <string name="spinner_select_account">Select an Account</string>
    <string name="prompt_amount">Amount</string>
    <string name="prompt_username">Email Address</string>
    <string name="action_view_all_trxs">VIEW ALL TRANSACTIONS</string>


    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>


    <string name="gcm_default_sender_id">728820095015</string>

    <string name="contributor_message">Are you interested in helping pay someone else\'s loan?</string>

    <string name="banksurl">http://192.168.1.14:9000/services/rest/banks</string>
    <string name="banklogourl">http://192.168.1.14:9000/services/rest/logo/</string>
    <string name="regurl">http://192.168.1.14:9000/services/rest/register</string>
    <string name="activurl">http://192.168.1.14:9000/services/rest/activate</string>
    <string name="profileurl">http://192.168.1.14:9000/services/rest/profile</string>
    <string name="loginurl">http://192.168.1.14:9000/sslogin</string>
    <string name="summaryurl">http://192.168.1.14:9000/services/rest/weeksummary</string>
    <string name="contributorsurl">http://192.168.1.14:9000/services/rest/contributors</string>
    <string name="roundupacctsurl">http://192.168.1.14:9000/services/rest/roundupaccounts</string>
    <string name="loanacctsurl">http://192.168.1.14:9000/services/rest/loanaccounts</string>

    <!--<string name="banksurl">http://192.168.1.12:9000/services/rest/banks</string>-->
    <!--<string name="banklogourl">http://192.168.1.12:9000/services/rest/logo/</string>-->
    <!--<string name="regurl">http://192.168.1.12:9000/services/rest/register</string>-->
    <!--<string name="activurl">http://192.168.1.12:9000/services/rest/activate</string>-->
    <!--<string name="profileurl">http://192.168.1.12:9000/services/rest/profile</string>-->
    <!--<string name="loginurl">http://192.168.1.12:9000/sslogin</string>-->
    <!--<string name="summaryurl">http://192.168.1.12:9000/services/rest/weeksummary</string>-->
    <!--<string name="contributorsurl">http://192.168.1.12:9000/services/rest/contributors</string>-->
    <!--<string name="roundupacctsurl">http://192.168.1.12:9000/services/rest/roundupaccounts</string>-->
    <!--<string name="loanacctsurl">http://192.168.1.12:9000/services/rest/loanaccounts</string>-->

    <!--<string name="banksurl">http://192.168.56.1:9000/services/rest/banks</string>-->
    <!--<string name="banklogourl">http://192.168.56.1:9000/services/rest/logo/</string>-->
    <!--<string name="regurl">http://192.168.56.1:9000/services/rest/register</string>-->
    <!--<string name="activurl">http://192.168.56.1:9000/services/rest/activate</string>-->
    <!--<string name="profileurl">http://192.168.56.1:9000/services/rest/profile</string>-->
    <!--<string name="loginurl">http://192.168.56.1:9000/sslogin</string>-->
    <!--<string name="summaryurl">http://192.168.56.1:9000/services/rest/weeksummary</string>-->
    <!--<string name="contributorsurl">http://192.168.56.1:9000/services/rest/contributors</string>-->
    <!--<string name="roundupacctsurl">http://192.168.56.1:9000/services/rest/roundupaccounts</string>-->
    <!--<string name="loanacctsurl">http://192.168.56.1:9000/services/rest/loanaccounts</string>-->


    <string-array name="us_states_list">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tenessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>

    </string-array>

</resources>
