<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_accounts_dialog_na"
    android:orientation="vertical"
    android:layout_width="400dp"
    android:layout_height="320dp"
    android:gravity="top"
    android:paddingBottom="5dp"
    android:layout_gravity="center_horizontal|center_vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:scaleType="center"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/na_dialog_header"
        android:contentDescription="@string/app_name"
        android:paddingBottom="10dp"/>

    <EditText
        android:id="@+id/na_acct_name"
        android:inputType="text"
        android:hint="@string/prompt_acct_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/nibble_main_textbox"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/na_acct_number"
        android:inputType="number"
        android:hint="@string/prompt_acct_number"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:background="@drawable/nibble_main_textbox"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <AutoCompleteTextView
            android:id="@+id/na_exp_month"
            android:inputType="number"
            android:hint="@string/prompt_exp_month"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:background="@drawable/nibble_main_textbox"/>
        <AutoCompleteTextView
            android:id="@+id/na_exp_year"
            android:inputType="number"
            android:hint="@string/prompt_exp_year"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:background="@drawable/nibble_main_textbox"/>

        <EditText
            android:id="@+id/na_acct_cvv"
            android:inputType="number"
            android:hint="@string/prompt_acct_cvv"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:background="@drawable/nibble_main_textbox"/>

    </LinearLayout>
    <Button android:id="@+id/add_card_button" style="?android:textAppearanceSmall"
        android:layout_width="250dp" android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" android:text="@string/action_add_card"
        android:textStyle="bold"
        android:textColor="#ffffffff"
        android:background="#FBB543" />
</LinearLayout>