<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".RegisterActivity"
        android:background="@drawable/dark_emb_background"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textColor="@color/nibble_main"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:background="@color/transparent"/>

        <include layout="@layout/register_wizard_steps_layout"/>

        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal">

            <ScrollView android:id="@+id/register_form_2" android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout android:id="@+id/register_form_2_layout" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:orientation="vertical" >

                        <EditText android:id="@+id/register_address1" android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:hint="@string/prompt_address1"
                            android:inputType="text" android:drawablePadding="15dp"
                            android:maxLines="1" android:singleLine="true"
                            android:layout_marginBottom="10dp"
                            android:textColorHint="#B3FFFFFF"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:background="@drawable/nibble_main_textbox"
                            android:drawableLeft="@drawable/ic_person_white_24dp"
                            android:paddingLeft="15dp"
                            android:textColor="#FFFFFF"  />

                        <EditText android:id="@+id/register_address2" android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:hint="@string/prompt_address2"
                            android:inputType="text" android:drawablePadding="15dp"
                            android:maxLines="1" android:singleLine="true"
                            android:layout_marginBottom="10dp"
                            android:textColorHint="#B3FFFFFF"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:background="@drawable/nibble_main_textbox"
                            android:drawableLeft="@drawable/ic_person_white_24dp"
                            android:paddingLeft="15dp"
                            android:textColor="#FFFFFF"  />

                        <EditText android:id="@+id/register_city" android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:hint="@string/prompt_city"
                            android:inputType="text" android:drawablePadding="15dp"
                            android:maxLines="1" android:singleLine="true"
                            android:layout_marginBottom="10dp"
                            android:textColorHint="#B3FFFFFF"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:background="@drawable/nibble_main_textbox"
                            android:drawableLeft="@drawable/ic_location_city_white_24dp"
                            android:paddingLeft="15dp"
                            android:textColor="#FFFFFF"  />

                        <Spinner
                                android:id="@+id/register_state"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:paddingStart="15dp"
                                android:entries="@array/us_states_list"
                                android:scrollbars="none" />


                        <!--<EditText android:id="@+id/register_state" android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content" android:hint="@string/prompt_state"-->
                            <!--android:inputType="text" android:drawablePadding="15dp"-->
                            <!--android:maxLines="1" android:singleLine="true"-->
                            <!--android:layout_marginBottom="10dp"-->
                            <!--android:textColorHint="#B3FFFFFF"-->
                            <!--android:paddingTop="5dp"-->
                            <!--android:paddingBottom="5dp"-->
                            <!--android:background="@drawable/nibble_main_textbox"-->
                            <!--android:drawableLeft="@drawable/ic_person_white_24dp"-->
                            <!--android:paddingLeft="15dp"-->
                            <!--android:textColor="#FFFFFF"  />-->

                        <EditText android:id="@+id/register_zip" android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:hint="@string/prompt_zip"
                            android:inputType="text" android:drawablePadding="15dp"
                            android:maxLines="1" android:singleLine="true"
                            android:layout_marginBottom="10dp"
                            android:textColorHint="#B3FFFFFF"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:background="@drawable/nibble_main_textbox"
                            android:drawableLeft="@drawable/ic_person_white_24dp"
                            android:paddingLeft="15dp"
                            android:textColor="#FFFFFF"  />

                        <EditText android:id="@+id/register_phone" android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:hint="@string/prompt_phone"
                            android:inputType="text" android:drawablePadding="15dp"
                            android:maxLines="1" android:singleLine="true"
                            android:layout_marginBottom="10dp"
                            android:textColorHint="#B3FFFFFF"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:background="@drawable/nibble_main_textbox"
                            android:drawableLeft="@drawable/ic_phone_in_talk_white_24dp"
                            android:paddingLeft="15dp"
                            android:textColor="#FFFFFF"  />

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/signup_progress_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/progress_bar_bg"
        android:visibility="gone">
        <include layout="@layout/progress_bar" android:id="@+id/signup_progress" />
    </RelativeLayout>
</RelativeLayout>