<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_emb_background">
    <ScrollView android:id="@+id/activation_form" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/activation_header"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
            android:descendantFocusability="beforeDescendants"


            android:focusableInTouchMode="true">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/activation_content"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"

                android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">


                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_marginTop="30dp"
                        android:id="@+id/logo_img"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/nibble_logo"  />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="activation"
                        android:textStyle="normal"
                        android:gravity="center_horizontal"
                        android:textColor="@color/nibble_main_light"
                        android:textSize="40dp" android:layout_marginTop="-30dp"
                        android:layout_marginBottom="50dp"/>

                <LinearLayout
                    android:id="@+id/ll2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" >


                        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                            android:orientation="vertical">
                            <EditText android:id="@+id/email" android:layout_width="match_parent"
                                      android:focusable="true"
                                      android:focusableInTouchMode="true"
                                      android:layout_height="wrap_content" android:hint="@string/prompt_username"
                                      android:drawablePadding="15dp"
                                      android:inputType="textEmailAddress" android:maxLines="1"
                                      android:singleLine="true"
                                      android:layout_marginBottom="10dp"
                                      android:textColorHint="#B3FFFFFF"
                                      android:background="@drawable/nibble_main_textbox"
                                      android:textAlignment="center"
                                      android:paddingTop="10dp"
                                      android:paddingBottom="10dp"
                                      android:paddingLeft="5dp"
                                      android:textColor="#FFFFFF"
                                      android:drawableLeft="@drawable/ic_local_post_office_white_24dp"  />
                            <!--android:text="dqbox@mozido.com"-->


                            <EditText android:id="@+id/password" android:layout_width="match_parent"
                                      android:layout_height="wrap_content" android:hint="@string/prompt_password"
                                      android:focusable="true"
                                      android:focusableInTouchMode="true"
                                      android:drawablePadding="15dp"
                                      android:imeActionLabel="@string/action_sign_in"
                                      android:imeOptions="actionUnspecified" android:inputType="textPassword"
                                      android:maxLines="1" android:singleLine="true"
                                      android:layout_marginBottom="10dp"
                                      android:textColorHint="#B3FFFFFF"
                                      android:background="@drawable/nibble_main_textbox"
                                      android:paddingTop="10dp"
                                      android:paddingBottom="10dp"
                                      android:paddingLeft="5dp"
                                      android:textColor="#FFFFFF"
                                      android:drawableLeft="@drawable/ic_lock_white_24dp" />

                            <EditText android:id="@+id/acode" android:layout_width="match_parent"
                                android:focusable="true"
                                android:focusableInTouchMode="true"
                                android:layout_height="wrap_content" android:hint="Activation Code"
                                android:drawablePadding="15dp"
                                android:inputType="textEmailAddress" android:maxLines="1"
                                android:singleLine="true"
                                android:layout_marginBottom="10dp"
                                android:textColorHint="#B3FFFFFF"
                                android:background="@drawable/nibble_main_textbox"
                                android:textAlignment="center"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp"
                                android:paddingLeft="5dp"
                                android:textColor="#FFFFFF"
                                android:drawableLeft="@drawable/ic_local_post_office_white_24dp"  />
                            <!--android:text="dqbox@mozido.com"-->



                            <Button android:id="@+id/activation_button" style="?android:textAppearanceSmall"
                                android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="Activate"
                                android:textStyle="bold"
                                android:textColor="@color/nibble_main"
                                android:background="@android:color/transparent" />


                        </LinearLayout>


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activation_progress_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:visibility="gone">

        <include layout="@layout/progress_bar" android:id="@+id/activation_progress" />


    </RelativeLayout>

</RelativeLayout>


